# devanagariMNIST

./: .gitignore  README.md  devanagarimnist.ipynb  main.py  pyproject.toml
preProcessing/: preProcess.ipynb
